--- a/DBTask/DBTask.csproj
+++ b/DBTask/DBTask.csproj
@@ -3,6 +3,20 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.15">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.15" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="DB\Services" />
+    </ItemGroup>
 
 </Project>
